added ref Vani2020

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1752,6 +1752,19 @@
   url       = {https://www.routledge.com/Blueprint-for-Screenwriting-A-Complete-Writers-Guide-to-Story-Structure/Ballon/p/book/9780805849233},
 }
 
+@InProceedings{Bamler2017,
+  author    = {Bamler, R. and Mandt, S.},
+  title     = {Dynamic Word Embeddings},
+  booktitle = {34th International Conference on Machine Learning},
+  year      = {2017},
+  volume    = {70},
+  series    = {Proceedings of Machine Learning Research},
+  pages     = {380-389},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+  url       = {http://proceedings.mlr.press/v70/bamler17a.html},
+}
+
 @InProceedings{Bamman2006,
   author    = {Bamman, D. and Crane, G.},
   title     = {The Design and Use of a Latin Dependency Treebank},
@@ -2773,8 +2786,8 @@
 
 @Article{Birant2007,
   author    = {Birant, D. and Kut, A.},
-  title     = {{ST}-{DBSCAN}: An algorithm for clustering spatial{\textendash}temporal data},
-  journal   = {Data {\&} Knowledge Engineering},
+  title     = {{ST}-{DBSCAN}: An algorithm for clustering spatial-temporal data},
+  journal   = {Data \& Knowledge Engineering},
   year      = {2007},
   volume    = {60},
   number    = {1},
@@ -4698,6 +4711,16 @@
   owner     = {Vincent},
   timestamp = {2020.01.04},
   url       = {https://arxiv.org/abs/1803.11175},
+}
+
+@InProceedings{Cer2018a,
+  author    = {Cer, D. and Yang, Y. and Kong, S.-Y. and Hua, N. and Limtiaco, N. and Saint John, R. and Constant, N. and Guajardo-Cespedes, M. and Yuan, S. and Tar, C. and Strope, B. and Kurzweil, R.},
+  title     = {Universal Sentence Encoder for English},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing: System Demonstrations},
+  year      = {2018},
+  doi       = {10.18653/v1/d18-2029},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
 }
 
 @TechReport{Chaganty2015,
@@ -6734,6 +6757,17 @@
   timestamp = {2019.03.28},
 }
 
+@InProceedings{Devlin2019,
+  author    = {Devlin, J. and Chang, M.-W. and Lee, K. and Toutanova, K.},
+  title     = {BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  year      = {2019},
+  pages     = {4171-4186},
+  doi       = {10.18653/v1/n19-1423},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+}
+
 @Article{DHuy2013,
   author    = {D'Huy, Julien},
   title     = {A phylogenetic approach of mythology and its archaeological consequences},
@@ -6745,6 +6779,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {https://halshs.archives-ouvertes.fr/halshs-00932214/},
+}
+
+@Article{DiCarlo2019,
+  author    = {Di Carlo, V. and Bianchi, F. and Palmonari, M.},
+  title     = {Training Temporal Word Embeddings with a Compass},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2019},
+  volume    = {33},
+  pages     = {6326-6334},
+  doi       = {10.1609/aaai.v33i01.33016326},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
 }
 
 @Article{Diesner2005,
@@ -10755,6 +10801,18 @@
   timestamp = {2019.07.03},
 }
 
+@Article{Han2019,
+  author    = {Han, R. and Liang, M. and Alhafni, B. and Peng, N.},
+  title     = {Contextualized word embeddings enhanced event temporal relation extraction for story understanding},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.CL},
+  pages     = {1904.11942},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+  url       = {https://arxiv.org/abs/1904.11942},
+}
+
 @Article{Hanjalic1999,
   author    = {Hanjalic, A. and Lagendijk, R. L. and Biemond, J.},
   title     = {Automated high-level movie segmentation for advanced video-retrieval systems},
@@ -10979,6 +11037,17 @@
   doi       = {10.1109/iccar.2017.7942788},
   owner     = {Vincent},
   timestamp = {2020.01.04},
+}
+
+@InProceedings{Hassan2019,
+  author    = {Hassan, H. A. M. and Sansonetti, G. and Gasparetti, F. and Micarelli, A. and Beel, J.},
+  title     = {BERT, ELMo, USE and InferSent sentence encoders: The panacea for research-paper recommendation?},
+  booktitle = {ACM RecSys / ACM Conference on Recommender Systems},
+  year      = {2019},
+  pages     = {6-10},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+  url       = {http://ceur-ws.org/Vol-2431/paper2.pdf},
 }
 
 @Book{Hastie2009,
@@ -11546,6 +11615,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1177/0265407509105524},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Hochreiter1997,
+  author    = {Hochreiter, S. and Schmidhuber, J.},
+  title     = {Long Short-Term Memory},
+  journal   = {Neural Computation},
+  year      = {1997},
+  volume    = {9},
+  number    = {8},
+  pages     = {1735-1780},
+  doi       = {10.1162/neco.1997.9.8.1735},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
 }
 
 @Book{Hockey2000,
@@ -14040,6 +14122,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.04.10},
 }
 
+@InProceedings{Kulkarni2015,
+  author    = {Kulkarni, V. and Al-Rfou, R. and Perozzi, B. and Skiena, S.},
+  title     = {Statistically Significant Detection of Linguistic Change},
+  booktitle = {24th International Conference on World Wide Web},
+  year      = {2015},
+  pages     = {625-635},
+  doi       = {10.1145/2736277.2741627},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+}
+
 @InProceedings{Kumar2006,
   author    = {Kumar, R. and Novak, J. and Tomkins, A.},
   title     = {Structure and Evolution of Online Social Networks},
@@ -14177,6 +14270,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.01},
   url       = {https://arxiv.org/abs/cond-mat/0308455},
+}
+
+@InProceedings{Kutuzov2018,
+  author    = {Kutuzov, A. and Øvrelid, L. and Szymanski, T. and Velldal, E.},
+  title     = {Diachronic word embeddings and semantic shifts: a survey},
+  booktitle = {27th International Conference on Computational Linguistics},
+  year      = {2018},
+  pages     = {1384-1397},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+  url       = {https://www.aclweb.org/anthology/C18-1117},
 }
 
 @Article{Kwon2016,
@@ -15457,6 +15561,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp     = {2018.07.21},
 }
 
+@InProceedings{Li2019,
+  author    = {Li, Z. and Ding, X. and Liu, T.},
+  title     = {Story Ending Prediction by Transferable BERT},
+  booktitle = {28th International Joint Conference on Artificial Intelligence},
+  year      = {2019},
+  pages     = {1800-1806},
+  doi       = {10.24963/ijcai.2019/249},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+}
+
 @InProceedings{Liang2009a,
   author    = {Liang, C. and Zhang, Y/ and Cheng, J. and Xu, C.-S. and Lu, H-Q.},
   title     = {A novel role-based movie scene segmentation method},
@@ -16386,7 +16501,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Maaten2008,
   author    = {van der Maaten, L. and Hinton, G.},
-  title     = {Visualizing data using t-sne},
+  title     = {Visualizing data using t-SNE},
   journal   = {Journal of Machine Learning Research},
   year      = {2008},
   volume    = {9},
@@ -18416,6 +18531,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.68.036105},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InProceedings{Mou2016,
+  author    = {Mou, L. and Meng, Z. and Yan, R. and Li, G. and Xu, Y. and Zhang, L. and Jin, Z.},
+  title     = {How Transferable are Neural Networks in NLP Applications?},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2016},
+  pages     = {479-489},
+  doi       = {10.18653/v1/d16-1046},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
 }
 
 @InProceedings{Mourchid2018,
@@ -20611,6 +20737,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.01},
 }
 
+@InProceedings{Peters2018,
+  author    = {Peters, M. and Neumann, M. and Iyyer, M. and Gardner, M. and Clark, C. and Lee, K. and Zettlemoyer, L.},
+  title     = {Deep Contextualized Word Representations},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  year      = {2018},
+  pages     = {2227-2237},
+  doi       = {10.18653/v1/n18-1202},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+}
+
 @Article{Petersen2012,
   author    = {Petersen, A. M. and Tenenbaum, J. N. and Havlin, S. and Stanley, H. E. and Matjaž, P.},
   title     = {Languages cool as they expand: Allometric scaling and the decreasing need for new words},
@@ -22616,6 +22753,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/iccv.1998.710701},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@InProceedings{Ruchansky2017,
+  author    = {Ruchansky, N. and Seo, S. and Liu, Y.},
+  title     = {CSI: A Hybrid Deep Model for Fake News Detection},
+  booktitle = {ACM Conference on Information and Knowledge Management},
+  year      = {2017},
+  pages     = {797-806},
+  doi       = {10.1145/3132847.3132877},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
 }
 
 @Article{Ruhnau2000,
@@ -26330,6 +26478,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.01},
   url       = {http://ceur-ws.org/Vol-2342/paper4.pdf?utm_campaign=piqcy&utm_medium=email&utm_source=Revue%20newsletter},
+}
+
+@InProceedings{Vani2020,
+  author    = {Vani, K. and Mellace, S. and Antonucci, A.},
+  title     = {Temporal Embeddings and Transformer Models for Narrative Text Understanding},
+  booktitle = {3rd International Workshop on Narrative Extraction from Texts},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2020.03.24},
+  url       = {https://arxiv.org/abs/2003.08811},
 }
 
 @Book{VanMaanen2011,
