--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -229,7 +229,6 @@
   booktitle     = {ACL Student Session},
   year          = {2011},
   pages         = {111-116},
-  __markedentry = {[Vincent:]},
   owner         = {Vincent},
   timestamp     = {2020.01.05},
   url           = {https://www.aclweb.org/anthology/P11-3020/},
@@ -387,7 +386,6 @@
   year          = {2017},
   volume        = {523},
   pages         = {281-306},
-  __markedentry = {[Vincent:]},
   doi           = {10.1016/j.laa.2017.02.029},
   owner         = {Vincent},
   timestamp     = {2017.05.03},
@@ -976,7 +974,6 @@
   volume        = {25},
   number        = {4},
   pages         = {1650021},
-  __markedentry = {[Vincent:]},
   doi           = {10.1142/S0218213016500214},
   owner         = {Vincent},
   timestamp     = {2016.08.25},
@@ -2178,14 +2175,29 @@
 
 @Article{Bazzan2018,
   author    = {Bazzan, A. L. C.},
-  title     = {I will be there for you: six friends in a clique},
-  journal   = {arXiv},
-  year      = {2018},
-  volume    = {cs.SI},
-  pages     = {1804.04408},
+  title     = {I will be there for you: clique, character centrality, and community detection in Friends},
+  journal   = {Computational and Applied Mathematics},
+  year      = {2020},
+  volume    = {39},
+  number    = {3},
+  pages     = {192},
+  doi       = {10.1007/s40314-020-01222-7},
+  groups    = {TV Series (Arts)},
   owner     = {Vincent},
   timestamp = {2018.11.11},
-  url       = {https://arxiv.org/abs/1804.04408},
+}
+
+@Article{Bazzan2020,
+  author    = {Bazzan, A. L. C.},
+  title     = {Similar Yet Different: the Structure of Social Networks of Characters in Seinfeld, Friends, How I met Your Mother, and The Big Bang Theory},
+  journal   = {Revista de Informática Teórica e Aplicada},
+  year      = {2020},
+  volume    = {27},
+  number    = {2},
+  pages     = {66-80},
+  doi       = {10.22456/2175-2745.98367},
+  owner     = {Vincent},
+  timestamp = {2020.04.28},
 }
 
 @Article{Bearman2000,
@@ -2442,6 +2454,19 @@
   doi       = {10.1145/1150402.1150462},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InProceedings{Berhe2020,
+  author    = {Berhe, A. and Guinaudeau, C. and Barras, C.},
+  title     = {Scene Linking Annotation and Automatic Scene Characterization in TV Series},
+  booktitle = {3rd International Workshop on Narrative Extraction from Texts},
+  year      = {2020},
+  volume    = {2593},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {47-53},
+  owner     = {Vincent},
+  timestamp = {2020.04.17},
+  url       = {http://ceur-ws.org/Vol-2593/paper6.pdf},
 }
 
 @Article{Bernard1988,
@@ -5307,7 +5332,6 @@
   year          = {2019},
   volume        = {6},
   pages         = {858-869},
-  __markedentry = {[Vincent:]},
   doi           = {10.1109/tcss.2019.2931721},
   issue         = {5},
   owner         = {Vincent},
@@ -7655,7 +7679,6 @@
   title         = {The One with the Social Network Analysis: the extraction, analysis and modelling of temporal social networks from narratives},
   year          = {2019},
   type          = {MSc Thesis},
-  __markedentry = {[Vincent:]},
   institution   = {University of Adelaide, Faculty of Engineering, Computer and Mathematical Sciences, School of Mathematical Sciences},
   owner         = {Vincent},
   timestamp     = {2019.08.30},
@@ -10867,7 +10890,6 @@
   year          = {2017},
   volume        = {5},
   pages         = {16963-16973},
-  __markedentry = {[Vincent:]},
   doi           = {10.1109/ACCESS.2017.2741098},
   groups        = {Signed Networks CD, Classic Optimization CD},
   owner         = {Vincent},
@@ -11203,7 +11225,6 @@
   series        = {Lecture Notes in Computer Science},
   pages         = {289-301},
   publisher     = {Springer},
-  __markedentry = {[Vincent:]},
   doi           = {10.1007/978-3-319-73600-6_25},
   owner         = {Vincent},
   timestamp     = {2019.06.27},
@@ -12716,6 +12737,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books/about/Scenic_form_in_Shakespeare.html?id=_KZlAAAAMAAJ&redir_esc=y},
+}
+
+@Article{Jones2020,
+  author    = {Jones, P. and Quinn, E. and Koskinen, J.},
+  title     = {Measuring centrality in film narratives using dynamic character interaction networks},
+  journal   = {Social Networks},
+  year      = {2020},
+  volume    = {63},
+  pages     = {21-37},
+  doi       = {10.1016/j.socnet.2020.03.003},
+  owner     = {Vincent},
+  timestamp = {2020.05.02},
 }
 
 @Article{Jovanovic2014,
@@ -14471,6 +14504,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Article{Lancichinetti2009a,
+  author    = {Lancichinetti, A. and Fortunato, S.},
+  title     = {Community detection algorithms: a comparative analysis},
+  journal   = {Physical Review E},
+  year      = {2009},
+  volume    = {80},
+  number    = {5},
+  pages     = {056117},
+  doi       = {10.1103/PhysRevE.80.056117},
+  owner     = {Vincent},
+  review    = {arXiv link: http://arxiv.org/abs/0908.1062},
+  timestamp = {2010.06.03},
+}
+
 @Book{Landauer2007,
   title     = {Handbook of latent semantic analysis},
   publisher = {Erlbaum},
@@ -15015,7 +15062,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title         = {Learning Distributed Representations of Character Networks for Computational Narrative Analytics},
   year          = {2019},
   type          = {PhD Thesis},
-  __markedentry = {[Vincent:]},
   institution   = {Chung-Ang University, School of Computer Science and Engineering},
   owner         = {Vincent},
   timestamp     = {2019.07.03},
@@ -15032,6 +15078,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.artint.2020.103235},
   owner     = {Vincent},
   timestamp = {2020.01.18},
+}
+
+@Article{Lee2020a,
+  author    = {Lee, O-J. and Jung, J. J. and Kim, J.-T.},
+  title     = {Learning Hierarchical Representations of Stories by Using Multi-layered Structures in Narrative Multimedia},
+  journal   = {Sensors},
+  year      = {2020},
+  volume    = {20},
+  number    = {7},
+  pages     = {1978},
+  doi       = {10.3390/s20071978},
+  owner     = {Vincent},
+  timestamp = {2020.04.03},
+}
+
+@InProceedings{Lee2020b,
+  author    = {Lee, O-J. and Kim, J.-T.},
+  title     = {Measuring Narrative Fluency by Analyzing Dynamic Interaction Networks in Textual Narratives},
+  booktitle = {3rd International Workshop on Narrative Extraction from Texts},
+  year      = {2020},
+  volume    = {2593},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {15-22},
+  owner     = {Vincent},
+  timestamp = {2020.04.17},
+  url       = {http://ceur-ws.org/Vol-2593/paper2.pdf},
 }
 
 @InCollection{Leerssen2019,
@@ -15555,7 +15627,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume        = {78},
   number        = {5},
   pages         = {5989-6012},
-  __markedentry = {[Vincent:]},
   doi           = {10.1007/s11042-018-6405-7},
   owner         = {Vincent},
   timestamp     = {2018.07.21},
@@ -16739,7 +16810,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume        = {475},
   series        = {IFIP Advances in Information and Communication Technology},
   pages         = {463-470},
-  __markedentry = {[Vincent:]},
   doi           = {10.1007/978-3-319-44944-9_40},
   owner         = {Vincent},
   timestamp     = {2016.09.08},
@@ -17129,7 +17199,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume        = {108},
   number        = {5},
   pages         = {1771-1776},
-  __markedentry = {[Vincent:]},
   doi           = {10.1073/pnas.1013213108},
   owner         = {Vincent},
   timestamp     = {2017.05.04},
@@ -18553,7 +18622,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   series        = {Studies in Computational Intelligence},
   pages         = {782-796},
   publisher     = {Springer},
-  __markedentry = {[Vincent:]},
   doi           = {10.1007/978-3-030-05411-3_62},
   owner         = {Vincent},
   timestamp     = {2018.12.07},
@@ -18569,6 +18637,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.10.26},
   url       = {https://arxiv.org/abs/1910.09368},
+}
+
+@InCollection{Mowshowitz2009,
+  author    = {Mowshowitz, A. and Mitsou, V.},
+  title     = {Entropy, Orbits, and Spectra of Graphs},
+  booktitle = {Analysis of Complex Networks},
+  publisher = {Wiley},
+  year      = {2009},
+  chapter   = {1},
+  pages     = {1-22},
+  doi       = {10.1002/9783527627981.ch1},
+  owner     = {Vincent},
+  timestamp = {2020.07.18},
 }
 
 @Book{Mrode2014,
@@ -21630,6 +21711,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.28},
 }
 
+@Article{Rashevsky1955,
+  author    = {Rashevsky, N.},
+  title     = {Life, information theory, and topology},
+  journal   = {Bulletin of Mathematical Biophysics},
+  year      = {1955},
+  volume    = {17},
+  number    = {3},
+  pages     = {229-235},
+  doi       = {10.1007/bf02477860},
+  owner     = {Vincent},
+  timestamp = {2020.07.18},
+}
+
 @InProceedings{Ratinov2009,
   author    = {Ratinov, L. and Roth, D.},
   title     = {Design challenges and misconceptions in named entity recognition},
@@ -21694,7 +21788,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year          = {2016},
   volume        = {5},
   pages         = {31},
-  __markedentry = {[Vincent:]},
   doi           = {10.1140/epjds/s13688-016-0093-1},
   owner         = {Vincent},
   timestamp     = {2016.11.21},
@@ -24042,6 +24135,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Sims2020,
+  author    = {Sims, M. and Bamman, D.},
+  title     = {Measuring Information Propagation in Literary Social Networks},
+  journal   = {arXiv},
+  year      = {2020},
+  volume    = {cs.CL},
+  pages     = {2004.13980},
+  owner     = {Vincent},
+  timestamp = {2020.05.05},
+  url       = {https://arxiv.org/abs/2004.13980},
+}
+
 @Article{Singh2012,
   author    = {Singh, K. P. and Gupta, S. and Kumar, A. and Shukla, S. P.},
   title     = {Linear and nonlinear modeling approaches for urban air quality prediction},
@@ -25875,7 +25980,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year          = {2019},
   volume        = {9},
   pages         = {5233},
-  __markedentry = {[Vincent:]},
   doi           = {10.1038/s41598-019-41695-z},
   owner         = {Vincent},
   timestamp     = {2018.10.22},
@@ -26791,7 +26895,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title         = {Temporal word embeddings for narrative understanding},
   booktitle     = {12th International Conference on Machine Learning and Computing},
   year          = {2020},
-  __markedentry = {[Vincent:]},
+  pages         = {68-72},
   doi           = {10.1145/12345.67890},
   owner         = {Vincent},
   timestamp     = {2019.11.29},
@@ -28147,7 +28251,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   booktitle     = {SIAM International Conference on Data Mining},
   year          = {2009},
   pages         = {990-1001},
-  __markedentry = {[Vincent:]},
   doi           = {10.1137/1.9781611972795.85},
   owner         = {Vincent},
   timestamp     = {2018.11.11},
@@ -28684,7 +28787,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume        = {9},
   number        = {2},
   pages         = {157-186},
-  __markedentry = {[Vincent:]},
   doi           = {10.5642/jhummath.201902.11},
   owner         = {Vincent},
   timestamp     = {2019.08.11},
@@ -28915,7 +29017,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume        = {95},
   number        = {4},
   pages         = {042313},
-  __markedentry = {[Vincent:]},
   doi           = {10.1103/PhysRevE.95.042313},
   owner         = {Vincent},
   timestamp     = {2017.05.03},
