--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5185,6 +5185,17 @@
   timestamp = {2019.12.31},
 }
 
+@InProceedings{Chen2019w,
+  author    = {Chen, M. and Zhang, W. and Zhang, W. and Chen, Q. and Chen, H.},
+  title     = {Meta Relational Learning for Few-Shot Link Prediction in Knowledge Graphs},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {4217-4226},
+  doi       = {10.18653/v1/d19-1431},
+  owner     = {Vincent},
+  timestamp = {2020.07.19},
+}
+
 @InProceedings{Cheng2009,
   author    = {Cheng, K.-Y. and Luo, S.-J. and Chen, B.-Y. and Chu, H.-H.},
   title     = {{SmartPlayer}: user-centric video fast-forwarding},
@@ -7301,6 +7312,17 @@
   owner     = {Vincent},
   timestamp = {2020.01.02},
   url       = {https://muse.jhu.edu/article/552219},
+}
+
+@InProceedings{Du2019a,
+  author    = {Du, B. and Tong, H.},
+  title     = {MrMine: Multi-resolution Multi-network Embedding},
+  booktitle = {28th ACM International Conference on Information and Knowledge Management},
+  year      = {2019},
+  pages     = {479-488},
+  doi       = {10.1145/3357384.3357944},
+  owner     = {Vincent},
+  timestamp = {2020.07.19},
 }
 
 @InProceedings{Duan2010,
@@ -10151,6 +10173,18 @@
   pages     = {21-43},
   doi       = {10.1016/j.cosrev.2018.06.001},
   timestamp = {2019.07.04},
+}
+
+@Article{Goyal2020,
+  author    = {Goyal, P. and Chhetri, S. R. and Canedo, A.},
+  title     = {dyngraph2vec: Capturing network dynamics using dynamic graph representation learning},
+  journal   = {Knowledge-Based Systems},
+  year      = {2020},
+  volume    = {187},
+  pages     = {104816},
+  doi       = {10.1016/j.knosys.2019.06.024},
+  owner     = {Vincent},
+  timestamp = {2020.07.19},
 }
 
 @InCollection{Graesser1991,
@@ -13297,6 +13331,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
+@Article{Khosla2019,
+  author    = {Khosla, M. and Setty, V. and Anand, A.},
+  title     = {A Comparative Study for Unsupervised Network Representation Learning},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2019},
+  volume    = {in press},
+  doi       = {10.1109/tkde.2019.2951398},
+  owner     = {Vincent},
+  timestamp = {2020.07.19},
+}
+
 @InProceedings{Khungurn2016,
   author    = {Khungurn, P. and Chou, D.},
   title     = {Pose estimation of anime/manga characters: a case for synthetic data},
@@ -15643,6 +15688,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.24},
 }
 
+@Article{Li2019t,
+  author    = {Li, Z. and Zhang, L. and Song, G.},
+  title     = {SepNE: Bringing Separability to Network Embedding},
+  journal   = {33rd AAAI Conference on Artificial Intelligence},
+  year      = {2019},
+  pages     = {4261-4268},
+  doi       = {10.1609/aaai.v33i01.33014261},
+  owner     = {Vincent},
+  timestamp = {2020.01.26},
+}
+
+@Article{Li2019w,
+  author    = {Li, C. and Wang, S. and Wang, Y. and Yu, P. and Liang, Y. and Liu, Y. and Li, Z.},
+  title     = {Adversarial Learning for Weakly-Supervised Social Network Alignment},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2019},
+  volume    = {33},
+  number    = {1},
+  pages     = {996-1003},
+  doi       = {10.1609/aaai.v33i01.3301996},
+  owner     = {Vincent},
+  timestamp = {2020.02.04},
+}
+
 @InProceedings{Liang2009a,
   author    = {Liang, C. and Zhang, Y/ and Cheng, J. and Xu, C.-S. and Lu, H-Q.},
   title     = {A novel role-based movie scene segmentation method},
@@ -16069,9 +16138,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Liu, W. and Sidhu, A. and Beacom, A. M. and Valente, T. W.},
   title     = {Social Network Theory},
   booktitle = {The International Encyclopedia of Media Effects},
+  publisher = {Wiley},
   year      = {2017},
   doi       = {10.1002/9781118783764.wbieme0092},
-  groups    = {Social Networks},
   owner     = {Vincent},
   timestamp = {2020.03.13},
 }
@@ -18170,6 +18239,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1467-8640.2012.00460.x},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Mohan2019,
+  author    = {Mohan, A. and Pramod, K. V.},
+  title     = {Network representation learning: models, methods and applications},
+  journal   = {SN Applied Sciences},
+  year      = {2019},
+  volume    = {1},
+  number    = {9},
+  pages     = {1014},
+  doi       = {10.1007/s42452-019-1044-9},
+  owner     = {Vincent},
+  timestamp = {2019.08.15},
 }
 
 @Article{Mollgaard2016,
@@ -23100,6 +23182,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Character networks for narrative generation: Structural balance theory and the emergence of proto-narratives},
   booktitle = {Workshop on Computational Models of Narrative},
   year      = {2013},
+  doi       = {10.4230/OASIcs.CMN.2013.183},
   owner     = {Vincent},
   timestamp = {2016.03.01},
   url       = {http://drops.dagstuhl.de/opus/volltexte/2013/4161/pdf/p183-sack.pdf},
@@ -25182,6 +25265,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/CVPR.2017.54},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Article{Sun2019f,
+  author    = {Sun, X. and Song, Z. and Dong, J. and Yu, Y. and Plant, C. and Böhm, C.},
+  title     = {Network Structure and Transfer Behaviors Embedding via Deep Prediction Model},
+  journal   = {33rd AAAI Conference on Artificial Intelligence},
+  year      = {2019},
+  pages     = {5041-5048},
+  doi       = {10.1609/aaai.v33i01.33015041},
+  owner     = {Vincent},
+  timestamp = {2020.01.26},
 }
 
 @Article{Sundararaman2005,
@@ -28935,6 +29029,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tip.2016.2601491},
   owner     = {Vincent},
   timestamp = {2019.12.31},
+}
+
+@InProceedings{Zhang2019aa,
+  author    = {Zhang, W. and Paudel, B. and Zhang, W. and Bernstein, A. and Chen, H.},
+  title     = {Interaction Embeddings for Prediction and Explanation in Knowledge Graphs},
+  booktitle = {12th ACM International Conference on Web Search and Data Mining},
+  year      = {2019},
+  pages     = {96-104},
+  doi       = {10.1145/3289600.3291014},
+  owner     = {Vincent},
+  timestamp = {2020.02.04},
 }
 
 @Article{Zhao2003,
